[package]
name = "rs-openai"
version = "0.1.0"
authors = ["jackyzha0 <j.zhao2k19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15.0"
leaky-bucket = "0.10.0"
merge = "0.1.0"
reqwest = { version = "0.11.0", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/rocket" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.2.0" , features = ["full"] }

[[bin]]
name = "openai-client"
path = "src/main.rs"